Renamings Online Storage -> Cloud Storage

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -300,7 +300,7 @@ action_online_storage.description=\u00d6ffnet den Folder im Webbrowser
 #orig#action_online_storage.key=O
 action_online_storage.key=O
 #orig#action_online_storage.name=Online Storage
-action_online_storage.name=Online Speicher
+action_online_storage.name=Cloud Speicher
 
 #orig#action_open_about_box.description=Show information about {APPNAME}
 action_open_about_box.description=Zeigt Informationen \u00fcber {APPNAME}
@@ -497,7 +497,7 @@ action_single_file_transfer.name=Versenden
 ##action_single_file_transfer_offer.name=Offer
 
 #orig#action_stop_online_storage.description=Stop backing up this folder to Online Storage
-action_stop_online_storage.description=H\u00e4lt die Sicherung der Dateien auf den Online Speicher an.
+action_stop_online_storage.description=H\u00e4lt die Sicherung der Dateien auf den Cloud Speicher an.
 #orig#action_stop_online_storage.key=S
 action_stop_online_storage.key=A
 #orig#action_stop_online_storage.name=Stop online backup
@@ -1570,12 +1570,12 @@ online_storage.account_data=Login fehlgeschlagen. Daten korrekt?
 online_storage.connecting=Verbinde zum Server
 
 #orig#online_storage_component.online_storage_text=Online storage\: {0}%
-online_storage_component.online_storage_text=Online Speicher\: {0}%
+online_storage_component.online_storage_text=Cloud Speicher\: {0}%
 ##online_storage_component.online_storage_tip=Open this online storage folder in browser
 ##online_storage_component.online_storage_unjoined_text=Online storage\: 0% (start now)
 ##online_storage_component.online_storage_unjoined_tip=Backup this folder to online storage
 #orig#online_storage_component.online_storage_warning=Online storage quota exceeded
-online_storage_component.online_storage_warning=Online Speicher voll
+online_storage_component.online_storage_warning=Cloud Speicher voll
 
 #orig#permissions.folder.admin=Admin
 permissions.folder.admin=Admin
@@ -1744,9 +1744,9 @@ preferences.dialog.nickname=Benutzername
 #orig#preferences.dialog.non_windows_info=Note\: Some settings are only available on Windows systems
 preferences.dialog.non_windows_info=Hinweis\: Einige Einstellung sind nur Benutzern von Windows m\u00f6glich\!
 #orig#preferences.dialog.online_storage.text=Use online storage
-preferences.dialog.online_storage.text=Online Speicher nutzen
+preferences.dialog.online_storage.text=Cloud Speicher nutzen
 #orig#preferences.dialog.online_storage.tip=Setup {APPNAME} to use online storage
-preferences.dialog.online_storage.tip=Online Speicherung aktivieren
+preferences.dialog.online_storage.tip=Cloud Speicher aktivieren
 #orig#preferences.dialog.open_port=Automatically open Windows Firewall
 preferences.dialog.open_port=Automatisch die Windows Firewall \u00f6ffnen
 #orig#preferences.dialog.open_port.tooltip=Opens the {APPNAME} port on the Windows Firewall
@@ -2635,21 +2635,21 @@ wizard.folder_invitation.title=Folder Einladung
 #orig#wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for online backup.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
 wizard.folder_online_storage.backup_success_message=Folder {0} wird nun online gesichert.\n \nDas erste Backup k\u00f6nnte einige Zeit\nin Anspruch nehmen bei gr\u00f6\u00dferen Datenmengen.
 #orig#wizard.folder_online_storage.backup_success_title=Online Storage Setup Successful
-wizard.folder_online_storage.backup_success_title=Online Speicher Setup erfolgreich
+wizard.folder_online_storage.backup_success_title=Cloud Speicher Setup erfolgreich
 #orig#wizard.folder_online_storage.remove_success_message=The folder was successfully removed from Online Storage
-wizard.folder_online_storage.remove_success_message=Folder erfolgreich vom Online Speicher entfernt
+wizard.folder_online_storage.remove_success_message=Folder erfolgreich vom Cloud Speicher entfernt
 #orig#wizard.folder_online_storage.remove_success_title=Online Storage Removal Successful
-wizard.folder_online_storage.remove_success_title=Vom Online Speicher entfernt
+wizard.folder_online_storage.remove_success_title=Vom Cloud Speicher entfernt
 #orig#wizard.folder_online_storage.warning_message=Do you really want to stop backing up this folder online?
 wizard.folder_online_storage.warning_message=M\u00f6chten Sie wirklich diesen Folder nicht mehr online sichern?
 #orig#wizard.folder_online_storage.warning_stop_backing=Stop backing up
 wizard.folder_online_storage.warning_stop_backing=Backup stoppen
 #orig#wizard.folder_online_storage.warning_title=Online Storage
-wizard.folder_online_storage.warning_title=Online Speicher
+wizard.folder_online_storage.warning_title=Cloud Speicher
 #orig#wizard.folder_online_storage.working=Configuring online storage
-wizard.folder_online_storage.working=Online Speicher einrichten
+wizard.folder_online_storage.working=Cloud Speicher einrichten
 #orig#wizard.folder_online_storage.working.text=Please wait while configuring online storage
-wizard.folder_online_storage.working.text=Bitten warten Sie w\u00e4hren der Online Speicher konfiguriert wird
+wizard.folder_online_storage.working.text=Bitten warten Sie w\u00e4hren der Cloud Speicher konfiguriert wird
 #orig#wizard.folder_setup.title=Configure folder
 wizard.folder_setup.title=Folder einrichten
 #orig#wizard.load_invitation.choose_file=Choose the invitation file
@@ -2665,7 +2665,7 @@ wizard.login_online_storage.logging_in=Melde an...
 #orig#wizard.login_online_storage.logging_in.text=Please wait while logging in.
 wizard.login_online_storage.logging_in.text=Bitte warten Sie bis zur Anmeldung.
 #orig#wizard.login_online_storage.no_os=Only direct sync. Don't store my files online.
-wizard.login_online_storage.no_os=Nur direkter Sync. Dateien nicht online speichern.
+wizard.login_online_storage.no_os=Nur direkter Sync. Dateien nicht in der cloud sichern.
 #orig#wizard.login_online_storage.remember_password=Remember password
 wizard.login_online_storage.remember_password=Passwort merken
 #orig#wizard.login_online_storage.setup_default=Setup default sync folder.
@@ -2755,15 +2755,15 @@ wizard.tell_friend.title.warning_bad_email='{0}' ist keine g\u00fcltige Email
 #orig#wizard.tell_friend.title.warning_title=Invalid email address
 wizard.tell_friend.title.warning_title=Ung\u00fcltige Email
 #orig#wizard.webservice.enter_account=Please enter your account details below
-wizard.webservice.enter_account=Bitte geben Sie Ihre Daten zum Login in den Online Speicher an
+wizard.webservice.enter_account=Bitte geben Sie Ihre Daten zum Login in den Cloud Speicher an
 #orig#wizard.webservice.learn_more=What is online storage?
-wizard.webservice.learn_more=Was ist der Online Speicher?
+wizard.webservice.learn_more=Was ist der Cloud Speicher?
 #orig#wizard.webservice.login=Login
 wizard.webservice.login=Login
 #orig#wizard.webservice.mirror_folder=Back up this folder online?
 wizard.webservice.mirror_folder=Diesen Folder online sichern
 #orig#wizard.webservice.mirror_setup=Backup folder online
-wizard.webservice.mirror_setup=Folder auf Online Speicher sichern
+wizard.webservice.mirror_setup=Folder auf Cloud Speicher sichern
 #orig#wizard.webservice.password=Password\:
 wizard.webservice.password=Passwort
 #orig#wizard.webservice.recover_password=Recover password
@@ -2771,7 +2771,7 @@ wizard.webservice.recover_password=Password vergessen
 #orig#wizard.webservice.unmirror_folder=Remove this folder from Online Storage
 wizard.webservice.unmirror_folder=Folder nicht l\u00e4nger online sichern
 #orig#wizard.webservice.unmirror_setup=Remove folder online
-wizard.webservice.unmirror_setup=Vom Online Speicher entfernen
+wizard.webservice.unmirror_setup=Vom Cloud Speicher entfernen
 #orig#wizard.webservice.username=Email\:
 wizard.webservice.username=Email
 #orig#wizard.what_to_do.backp.select=Please select the files to backup
