Fix bug where you cannot see all-read notices ;-)

--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -2335,7 +2335,7 @@ status_tab.never_synced=Cartelle mai sincronizzate
 status_tab.new_friendship_notices=Richiesta(e) di amicizia
 status_tab.new_invitation_notices=Invito(i)
 status_tab.new_invitations=Nuovo invito(i)
-status_tab.new_notices=Notifica(e)
+#orig#status_tab.unread_notices=Unread notices
 status_tab.new_single_file_offers=Offerta(e)  di un nuovo file singolo
 status_tab.new_warning_notices=Avviso(i)
 #orig#status_tab.no_computers=No other computers known
