--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -1551,7 +1551,7 @@ send_invitation.placetostore=\u0623\u062e\u062a\u0631 \u0645\u0643\u0627\u0646\u
 ##status_tab.new_friendship_notices=Friendship request(s)
 ##status_tab.new_invitation_notices=Invitations(s)
 ##status_tab.new_invitations=New invitation(s)
-##status_tab.new_notices=Notice(s)
+##status_tab.unread_notices=Unread notice(s)
 ##status_tab.new_single_file_offers=New single file offer(s)
 ##status_tab.new_warning_notices=Warning(s)
 ##status_tab.no_computers=No other computers known
