--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2269,7 +2269,7 @@ status_tab.never_synced=Folder noch nie synchronisiert
 ##status_tab.new_friendship_notices=Friendship request(s)
 ##status_tab.new_invitation_notices=Invitations(s)
 ##status_tab.new_invitations=New invitation(s)
-##status_tab.new_notices=Notice(s)
+##status_tab.unread_notices=Unread notice(s)
 ##status_tab.new_single_file_offers=New single file offer(s)
 ##status_tab.new_warning_notices=Warning(s)
 #orig#status_tab.no_computers=No other computers known
