--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -1693,7 +1693,7 @@ status_bar.status_change.title=\u63a5\u7d9a\u30b9\u30c6\u30fc\u30bf\u30b9
 ##status_tab.new_friendship_notices=Friendship request(s)
 ##status_tab.new_invitation_notices=Invitations(s)
 ##status_tab.new_invitations=New invitation(s)
-##status_tab.new_notices=Notice(s)
+##status_tab.unread_notices=Unread notice(s)
 ##status_tab.new_single_file_offers=New single file offer(s)
 ##status_tab.new_warning_notices=Warning(s)
 ##status_tab.no_computers=No other computers known
