--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -1529,7 +1529,7 @@ send_invitation.placetostore=Kies een plek om de invitatie op te slaan
 ##status_tab.new_friendship_notices=Friendship request(s)
 ##status_tab.new_invitation_notices=Invitations(s)
 ##status_tab.new_invitations=New invitation(s)
-##status_tab.new_notices=Notice(s)
+##status_tab.unread_notices=Unread notice(s)
 ##status_tab.new_single_file_offers=New single file offer(s)
 ##status_tab.new_warning_notices=Warning(s)
 ##status_tab.no_computers=No other computers known
