--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -1695,7 +1695,7 @@ status_bar.status_change.title=\u0421\u043e\u0441\u0442\u043e\u044f\u043d\u0438\
 ##status_tab.new_friendship_notices=Friendship request(s)
 ##status_tab.new_invitation_notices=Invitations(s)
 ##status_tab.new_invitations=New invitation(s)
-##status_tab.new_notices=Notice(s)
+##status_tab.unread_notices=Unread notice(s)
 ##status_tab.new_single_file_offers=New single file offer(s)
 ##status_tab.new_warning_notices=Warning(s)
 ##status_tab.no_computers=No other computers known
