Migrate Backup Source, fixes #2074

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2417,7 +2417,7 @@ transfer_mode.automatic_synchronization.name=Auto sync (jede Minute)
 #orig#transfer_mode.automatic_synchronization_10min.name=Auto sync (10 minutes)
 transfer_mode.automatic_synchronization_10min.name=Auto sync (10 Minuten)
 #orig#transfer_mode.backup_source.name=Backup source (5 minutes)
-transfer_mode.backup_source.name=Backup Quelle (5 Minuten)
+transfer_mode.backup_source_5min.name=Backup Quelle (5 Minuten)
 #orig#transfer_mode.backup_source_hour.name=Backup source (1 hour)
 transfer_mode.backup_source_hour.name=Backup Quelle (jede Stunde)
 #orig#transfer_mode.backup_target.name=Backup target
