--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -2446,7 +2446,7 @@ transfer_mode.automatic_synchronization.name=Auto sync (1 minuto)
 #orig#transfer_mode.automatic_synchronization_10min.name=Auto sync (10 minutes)
 transfer_mode.automatic_synchronization_10min.name=Auto sync (10 minutes)
 #orig#transfer_mode.backup_source.name=Backup source (5 minutes)
-transfer_mode.backup_source.name=Respadar fuente(5 minutos)
+transfer_mode.backup_source_5min.name=Respadar fuente(5 minutos)
 #orig#transfer_mode.backup_source_hour.name=Backup source (1 hour)
 transfer_mode.backup_source_hour.name=Respaldar fuente (1 hora)
 #orig#transfer_mode.backup_target.name=Backup target
