--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -2503,7 +2503,7 @@ transfer_mode.automatic_synchronization.name=\u81ea\u52a8\u540c\u6b65\uff081 \u5
 #orig#transfer_mode.automatic_synchronization_10min.name=Auto sync (10 minutes)
 transfer_mode.automatic_synchronization_10min.name=\u81ea\u52a8\u540c\u6b65\uff081 0\u5206\u949f\uff09
 #orig#transfer_mode.backup_source.name=Backup source (5 minutes)
-transfer_mode.backup_source.name=\u5907\u4efd\u6e90\uff085\u5206\u949f\uff09
+transfer_mode.backup_source_5min.name=\u5907\u4efd\u6e90\uff085\u5206\u949f\uff09
 #orig#transfer_mode.backup_source_hour.name=Backup source (1 hour)
 transfer_mode.backup_source_hour.name=\u5907\u4efd\u6e90\uff081\u5c0f\u65f6\uff09
 #orig#transfer_mode.backup_target.name=Backup target
