--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -315,7 +315,7 @@ transfer_mode.automatic_download.name=Automatic download
 transfer_mode.auto_sync.name=Auto sync
 transfer_mode.automatic_synchronization.name=Auto sync (1 minute)
 transfer_mode.automatic_synchronization_10min.name=Auto sync (10 minutes)
-transfer_mode.backup_source.name=Backup source (5 minutes)
+transfer_mode.backup_source_5min.name=Backup source (5 minutes)
 transfer_mode.backup_source_hour.name=Backup source (1 hour)
 transfer_mode.backup_target.name=Backup target
 transfer_mode.custom.name=Custom profile
