--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -2489,7 +2489,7 @@ transfer_mode.automatic_synchronization.name=Auto sync (1 minuto)
 #orig#transfer_mode.automatic_synchronization_10min.name=Auto sync (10 minutes)
 transfer_mode.automatic_synchronization_10min.name=Auto sync (10 minuti)
 #orig#transfer_mode.backup_source.name=Backup source (5 minutes)
-transfer_mode.backup_source.name=Backup sorgente (5 minuti)
+transfer_mode.backup_source_5min.name=Backup sorgente (5 minuti)
 #orig#transfer_mode.backup_source_hour.name=Backup source (1 hour)
 transfer_mode.backup_source_hour.name=Backup sorgente (1 ora)
 #orig#transfer_mode.backup_target.name=Backup target
