Show client promo GFX when limit is about to exceed. Several other fine tunings

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2577,7 +2577,7 @@ wizard.choose_disk_location.maual_sync=Manuell synchronisieren
 #orig#wizard.choose_disk_location.options=Please select required options
 wizard.choose_disk_location.options=Optionen ausw\u00e4hlen
 #orig#wizard.choose_disk_location.os_over_size=Allowed capacity may be exceeded. Purchase recommended.
-wizard.choose_disk_location.os_over_size=Erlaubte Kapazit\u00e4t k\u00f6nnte \u00fcberbelegt werden. Kauf empfohlen.
+wizard.choose_disk_location.os_over_size=Maximale Datenmenge überschritten. Upgrade empfohlen.
 #orig#wizard.choose_disk_location.select=Please select the directory
 wizard.choose_disk_location.select=Bitte w\u00e4hlen Sie das Verzeichnis
 #orig#wizard.choose_disk_location.select_file=Select file
@@ -2651,7 +2651,7 @@ wizard.folder_online_storage.working=Cloud Speicher einrichten
 #orig#wizard.folder_online_storage.working.text=Please wait while configuring online storage
 wizard.folder_online_storage.working.text=Bitten warten Sie w\u00e4hren der Cloud Speicher konfiguriert wird
 #orig#wizard.folder_setup.title=Configure folder
-wizard.folder_setup.title=Folder einrichten
+wizard.folder_setup.title=Auf diesem Computer speichern
 #orig#wizard.load_invitation.choose_file=Choose the invitation file
 wizard.load_invitation.choose_file=Einladungs-Datei \u00f6ffnen
 #orig#wizard.load_invitation.select=Select invitation file
@@ -2731,7 +2731,7 @@ wizard.send_invitations.sending_invites=Verschicke Einladung
 #orig#wizard.send_invitations.sending_invites.text=Please wait while sending invite.
 wizard.send_invitations.sending_invites.text=Bitte warten w\u00e4hrend die Einladung verschickt wird
 #orig#wizard.send_invitations.title=Send Invitation
-wizard.send_invitations.title=Einladung versenden
+wizard.send_invitations.title=Andere Personen einladen
 #orig#wizard.send_invitations_advanced.title=Send Invitation - Advanced
 wizard.send_invitations_advanced.title=Einladung Versenden - Erweitert
 #orig#wizard.setup_success=Setup successfully
