--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2583,7 +2583,7 @@ wizard.choose_disk_location.select=Bitte w\u00e4hlen Sie das Verzeichnis
 #orig#wizard.choose_disk_location.select_file=Select file
 wizard.choose_disk_location.select_file=Datei ausw\u00e4hlen
 #orig#wizard.choose_disk_location.send_invitation=Send invitation
-wizard.choose_disk_location.send_invitation=Einladungen versenden
+wizard.choose_disk_location.send_invitation=An andere Personen verschicken
 #orig#wizard.choose_disk_location.target_dir=Target directory
 wizard.choose_disk_location.target_dir=Zielverzeichnis
 #orig#wizard.choose_disk_location.title=Select Directory
@@ -2731,7 +2731,7 @@ wizard.send_invitations.sending_invites=Verschicke Einladung
 #orig#wizard.send_invitations.sending_invites.text=Please wait while sending invite.
 wizard.send_invitations.sending_invites.text=Bitte warten w\u00e4hrend die Einladung verschickt wird
 #orig#wizard.send_invitations.title=Send Invitation
-wizard.send_invitations.title=Andere Personen einladen
+wizard.send_invitations.title=An andere Personen verschicken
 #orig#wizard.send_invitations_advanced.title=Send Invitation - Advanced
 wizard.send_invitations_advanced.title=Einladung Versenden - Erweitert
 #orig#wizard.setup_success=Setup successfully
