--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -911,9 +911,9 @@ exp_folder_view.files_available_tip=Verf\u00fcgbare Dateien ansehen
 #orig#exp_folder_view.folder_local_online_text=Local folder, backed up online
 exp_folder_view.folder_local_online_text=Lokaler Folder, online gesichert
 #orig#exp_folder_view.folder_local_text=Local folder
-exp_folder_view.folder_local_text=Lokaler Folder
+exp_folder_view.folder_local_text=Auf diesem Computer
 #orig#exp_folder_view.folder_online_text=Non-local folder
-exp_folder_view.folder_online_text=Nicht-lokaler Folder
+exp_folder_view.folder_online_text=Verfügbarer Folder
 #orig#exp_folder_view.folder_preview_text=Preview folder
 exp_folder_view.folder_preview_text=Vorschau Folder
 #orig#exp_folder_view.last_synchronized=Last sync\: {0}
@@ -1215,9 +1215,9 @@ folders_list.collapse_hint=Gruppe zuklappen
 #orig#folders_list.expand_hint=Expand group
 folders_list.expand_hint=Gruppe ausklappen
 #orig#folders_list.local_folders=Local folders
-folders_list.local_folders=Lokale Folder
+folders_list.local_folders=Auf diesem Computer
 #orig#folders_list.online_folders=Non-local folders
-folders_list.online_folders=Nicht-lokale Folder
+folders_list.online_folders=Verfügbare Folder
 
 #orig#folders_tab.no_folders_available=No folders available
 folders_tab.no_folders_available=Keine Folder verf\u00fcgbar
