--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -1856,7 +1856,7 @@ preferences.dialog.show_advanced=\u663e\u793a\u9ad8\u7ea7\u8bbe\u7f6e
 #orig#preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 preferences.dialog.show_chat_notifications=\u6700\u5c0f\u5316\u65f6\u663e\u793a\u804a\u5929\u63d0\u793a
 #orig#preferences.dialog.show_pf_link=Display {APPNAME} folders in Links
-preferences.dialog.show_pf_link=\u5728\u94fe\u63a5\u4e2d\u663e\u793aPowerfolder\u76ee\u5f55
+preferences.dialog.show_pf_link=\u5728\u94fe\u63a5\u4e2d\u663e\u793a{APPNAME}\u76ee\u5f55
 #orig#preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.show_system_notifications=\u6700\u5c0f\u5316\u65f6\u663e\u793a\u7cfb\u7edf\u63d0\u793a
 #orig#preferences.dialog.silent_throttle=Pause bandwidth throttle
