Renamed PRO SETTINGS to Plugins

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1760,7 +1760,7 @@ preferences.dialog.plugin.status_disabled=Ausgeschaltet
 #orig#preferences.dialog.plugin.status_enabled=Enabled
 preferences.dialog.plugin.status_enabled=Aktiv
 #orig#preferences.dialog.plugin.title=Pro Settings
-preferences.dialog.plugin.title=Pro Einstellungen
+preferences.dialog.plugin.title=Plugins
 #orig#preferences.dialog.randomPort=Automatically find a port
 preferences.dialog.randomPort=Automatisch einen Port finden
 #orig#preferences.dialog.randomPort.tooltip={APPNAME} will try to bind to a random port.
