--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -1816,7 +1816,7 @@ preferences.dialog.plugin.status_disabled=Deshabilitado
 #orig#preferences.dialog.plugin.status_enabled=Enabled
 preferences.dialog.plugin.status_enabled=Habilitado
 #orig#preferences.dialog.plugin.title=Pro Settings
-preferences.dialog.plugin.title=Pro Settings
+preferences.dialog.plugin.title=Plugins
 #orig#preferences.dialog.randomPort=Automatically find a port
 preferences.dialog.randomPort=Encontrar un puerto autom\u00e1ticamente
 #orig#preferences.dialog.randomPort.tooltip={APPNAME} will try to bind to a random port.
