--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -1316,7 +1316,7 @@ preferences.dialog.plugin.status_disabled=D\u00e9sactiv\u00e9e
 #orig#preferences.dialog.plugin.status_enabled=Enabled
 preferences.dialog.plugin.status_enabled=Activ\u00e9e
 #orig#preferences.dialog.plugin.title=Pro Settings
-preferences.dialog.plugin.title=Plug-in
+preferences.dialog.plugin.title=Plug-ins
 #orig#preferences.dialog.randomPort=Automatically find a port
 preferences.dialog.randomPort=Trouver un port automatiquement
 #orig#preferences.dialog.randomPort.tooltip={APPNAME} will try to bind to a random port.
