--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -1217,7 +1217,7 @@ preferences.dialog.plugin.status_disabled=Actief
 #orig#preferences.dialog.plugin.status_enabled=Enabled
 preferences.dialog.plugin.status_enabled=InActief
 #orig#preferences.dialog.plugin.title=Pro Settings
-preferences.dialog.plugin.title=Pro instellingen
+#preferences.dialog.plugin.title=Pro instellingen
 #orig#preferences.dialog.randomPort=Automatically find a port
 preferences.dialog.randomPort=Automatisch zoeken van poort
 #orig#preferences.dialog.randomPort.tooltip={APPNAME} will try to bind to a random port.
