Local mass delete notice, fixes #2115

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -2462,13 +2462,13 @@ transfers.to=Zu
 transfers.verifying=Abschlie\u00dfen
 
 #orig#uicontroller.local_mass_delete.broadcast_deletions=Broadcast deletions
-uicontroller.local_mass_delete.broadcast_deletions=L\u00f6schung ver\u00f6ffentlichen
+local_delete_notice.broadcast_deletions=L\u00f6schung ver\u00f6ffentlichen
 #orig#uicontroller.local_mass_delete.message=All files in folder {0} have been deleted.\n\nDeletions have not been distributed to other members.
-uicontroller.local_mass_delete.message=Alle Dateien in {0} wurden gel\u00f6scht.\n\nDie L\u00f6schung wurde nicht an andere Mitglieder \u00fcbertragen.
+local_delete_notice.message=Alle Dateien in {0} wurden gel\u00f6scht.\n\nDie L\u00f6schung wurde nicht an andere Mitglieder \u00fcbertragen.
 #orig#uicontroller.local_mass_delete.remove_folder_locally=Remove folder locally
-uicontroller.local_mass_delete.remove_folder_locally=Folder lokal entfernen
+local_delete_notice.remove_folder_locally=Folder lokal entfernen
 #orig#uicontroller.local_mass_delete.title=All files deleted
-uicontroller.local_mass_delete.title=Alle Dateien gel\u00f6scht
+local_delete_notice.title=Alle Dateien gel\u00f6scht
 ##uicontroller.remote_mass_delete.warning_absolute_message=Member {0} deleted {1} or more files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 #orig#uicontroller.remote_mass_delete.warning_message=Member {0} deleted {1}% of files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 uicontroller.remote_mass_delete.warning_message=Mitglied {0} hat {1}% der Dateien in {2} gel\u00f6scht.\n\nUm die lokalen Dateien zu sch\u00fctzen wurde der Transfer Modus\nvon {3} auf {4} gestellt.
