--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -2491,13 +2491,13 @@ transfers.to=Para
 transfers.verifying=Verificando Sincronizaci\u00f3n
 
 #orig#uicontroller.local_mass_delete.broadcast_deletions=Broadcast deletions
-uicontroller.local_mass_delete.broadcast_deletions=Aunciar archivos o carpetas que han sido eliminados
+local_delete_notice.broadcast_deletions=Aunciar archivos o carpetas que han sido eliminados
 #orig#uicontroller.local_mass_delete.message=All files in folder {0} have been deleted.\n\nDeletions have not been distributed to other members.
-uicontroller.local_mass_delete.message=Todos los archivos en carpeta {0} han sido borrados.\n\nEliminaciones no han sido trasnmitidos a otros miembros.
+local_delete_notice.message=Todos los archivos en carpeta {0} han sido borrados.\n\nEliminaciones no han sido trasnmitidos a otros miembros.
 #orig#uicontroller.local_mass_delete.remove_folder_locally=Remove folder locally
-uicontroller.local_mass_delete.remove_folder_locally=Remover carpeta de manera local
+local_delete_notice.remove_folder_locally=Remover carpeta de manera local
 #orig#uicontroller.local_mass_delete.title=All files deleted
-uicontroller.local_mass_delete.title=Todos los archivos eliminados
+local_delete_notice.title=Todos los archivos eliminados
 #orig#uicontroller.remote_mass_delete.warning_absolute_message=Member {0} deleted {1} or more files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 uicontroller.remote_mass_delete.warning_absolute_message=Miembro {0} borrado {1} o m'as archvios de la carpeta {2}.\n\nPara proteger archivos locales, el m'etodo de transferencia de estas carpetas ha sido alterado\n de {3} a {4}.
 #orig#uicontroller.remote_mass_delete.warning_message=Member {0} deleted {1}% of files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
