--- a/src/etc/Translation_hu.properties
+++ b/src/etc/Translation_hu.properties
@@ -2479,13 +2479,13 @@ transfers.to=C\u00e9l
 transfers.verifying=Befejez\u00e9s
 
 #orig#uicontroller.local_mass_delete.broadcast_deletions=Broadcast deletions
-uicontroller.local_mass_delete.broadcast_deletions=T\u00f6rl\u00e9sek kihirdet\u00e9se
+local_delete_notice.broadcast_deletions=T\u00f6rl\u00e9sek kihirdet\u00e9se
 #orig#uicontroller.local_mass_delete.message=All files in folder {0} have been deleted.\n\nDeletions have not been distributed to other members.
-uicontroller.local_mass_delete.message=A(z) {0} mappa \u00f6sszes f\u00e1jlja t\u00f6rl\u00e9sre ker\u00fclt.\n\nA t\u00f6rl\u00e9sek nem ker\u00fcltek tov\u00e1bb\u00edt\u00e1sra a t\u00f6bbi tag fel\u00e9.
+local_delete_notice.message=A(z) {0} mappa \u00f6sszes f\u00e1jlja t\u00f6rl\u00e9sre ker\u00fclt.\n\nA t\u00f6rl\u00e9sek nem ker\u00fcltek tov\u00e1bb\u00edt\u00e1sra a t\u00f6bbi tag fel\u00e9.
 #orig#uicontroller.local_mass_delete.remove_folder_locally=Remove folder locally
-uicontroller.local_mass_delete.remove_folder_locally=Mappa lok\u00e1lis elt\u00e1vol\u00edt\u00e1sa
+local_delete_notice.remove_folder_locally=Mappa lok\u00e1lis elt\u00e1vol\u00edt\u00e1sa
 #orig#uicontroller.local_mass_delete.title=All files deleted
-uicontroller.local_mass_delete.title=Az \u00f6sszes f\u00e1jl t\u00f6rl\u00e9sre ker\u00fclt
+local_delete_notice.title=Az \u00f6sszes f\u00e1jl t\u00f6rl\u00e9sre ker\u00fclt
 #orig#uicontroller.remote_mass_delete.warning_absolute_message=Member {0} deleted {1} or more files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 uicontroller.remote_mass_delete.warning_absolute_message={0} t\u00f6r\u00f6lt {1} vagy t\u00f6bb f\u00e1jlt a(z) {2} mapp\u00e1b\u00f3l.\n\nnA helyi f\u00e1jlok meg\u0151z\u00e9se c\u00e9lj\u00e1b\u00f3l a mappa \u00e1tviteli m\u00f3dja \u00e1t\u00e1ll\u00edt\u00e1sra ker\u00fclt.\nEredeti \u00e1tviteli m\u00f3d\: {3} \u00daj \u00e1tviteli m\u00f3d\: {4}.
 #orig#uicontroller.remote_mass_delete.warning_message=Member {0} deleted {1}% of files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
