--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -2548,13 +2548,13 @@ transfers.to=\u76ee\u6807
 transfers.verifying=\u6b63\u5728\u5b8c\u6210
 
 #orig#uicontroller.local_mass_delete.broadcast_deletions=Broadcast deletions
-uicontroller.local_mass_delete.broadcast_deletions=\u901a\u77e5\u5220\u9664
+local_delete_notice.broadcast_deletions=\u901a\u77e5\u5220\u9664
 #orig#uicontroller.local_mass_delete.message=All files in folder {0} have been deleted.\n\nDeletions have not been distributed to other members.
-uicontroller.local_mass_delete.message=\u6587\u4ef6\u5939 {0} \u4e2d\u7684\u6240\u6709\u6587\u4ef6\u5df2\u7ecf\u88ab\u5220\u9664\u3002\n\n\u5220\u9664\u52a8\u4f5c\u8fd8\u6ca1\u6709\u53d1\u9001\u7ed9\u5176\u5b83\u6210\u5458\u3002
+local_delete_notice.message=\u6587\u4ef6\u5939 {0} \u4e2d\u7684\u6240\u6709\u6587\u4ef6\u5df2\u7ecf\u88ab\u5220\u9664\u3002\n\n\u5220\u9664\u52a8\u4f5c\u8fd8\u6ca1\u6709\u53d1\u9001\u7ed9\u5176\u5b83\u6210\u5458\u3002
 #orig#uicontroller.local_mass_delete.remove_folder_locally=Remove folder locally
-uicontroller.local_mass_delete.remove_folder_locally=\u5220\u9664\u672c\u5730\u6587\u4ef6\u5939
+local_delete_notice.remove_folder_locally=\u5220\u9664\u672c\u5730\u6587\u4ef6\u5939
 #orig#uicontroller.local_mass_delete.title=All files deleted
-uicontroller.local_mass_delete.title=\u5220\u9664\u6240\u6709\u6587\u4ef6
+local_delete_notice.title=\u5220\u9664\u6240\u6709\u6587\u4ef6
 #orig#uicontroller.remote_mass_delete.warning_absolute_message=Member {0} deleted {1} or more files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 uicontroller.remote_mass_delete.warning_absolute_message=\u6210\u5458 {0} \u5220\u9664\u4e86\u6587\u4ef6\u5939 {2} \u4e2d{1}\u4e2a\u4ee5\u4e0a \u7684\u6587\u4ef6\u3002\n\n\u4e3a\u4e86\u4fdd\u62a4\u672c\u5730\u6587\u4ef6\uff0c\u6587\u4ef6\u5939\u7684\u4f20\u8f93\u6a21\u5f0f\n\u4ece {3} \u53d8\u66f4\u4e3a {4}\u3002\u3002
 #orig#uicontroller.remote_mass_delete.warning_message=Member {0} deleted {1}% of files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
