--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -2534,13 +2534,13 @@ transfers.to=A
 transfers.verifying=Verifica sincronizzazione in corso
 
 #orig#uicontroller.local_mass_delete.broadcast_deletions=Broadcast deletions
-uicontroller.local_mass_delete.broadcast_deletions=Cancellazioni Broadcast
+local_delete_notice.broadcast_deletions=Cancellazioni Broadcast
 #orig#uicontroller.local_mass_delete.message=All files in folder {0} have been deleted.\n\nDeletions have not been distributed to other members.
-uicontroller.local_mass_delete.message=Tutti i file nella cartella {0} sono stati cancellati.\n\nLe cancellazioni non sono state distribuite agli altri membri.
+local_delete_notice.message=Tutti i file nella cartella {0} sono stati cancellati.\n\nLe cancellazioni non sono state distribuite agli altri membri.
 #orig#uicontroller.local_mass_delete.remove_folder_locally=Remove folder locally
-uicontroller.local_mass_delete.remove_folder_locally=Rimuovi cartelle localmente
+local_delete_notice.remove_folder_locally=Rimuovi cartelle localmente
 #orig#uicontroller.local_mass_delete.title=All files deleted
-uicontroller.local_mass_delete.title=Tutti i file sono stati cancellati
+local_delete_notice.title=Tutti i file sono stati cancellati
 #orig#uicontroller.remote_mass_delete.warning_absolute_message=Member {0} deleted {1} or more files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 uicontroller.remote_mass_delete.warning_absolute_message=Il membro {0} ha cancellato {1} o pi\u00f9 file dalla cartella {2}.\n\nPer proteggere i files locali, la modalit\u00e0 di trasferimento di questa cartella \u00e8 stata modificata\nda {3} a {4}.
 #orig#uicontroller.remote_mass_delete.warning_message=Member {0} deleted {1}% of files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
